--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.15.2",
     "mongoose": "^4.9.6",
     "node-fetch": "^1.6.3"
+  },
+  "engines": {
+    "node": "7.6.0"
   }
 }
