--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appier-code-challenge",
+  "name": "find-near-me",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
